[gd_scene load_steps=23 format=2]

[ext_resource path="res://Server.gd" type="Script" id=1]
[ext_resource path="res://supportScenes/residentialHousePreview.tscn" type="PackedScene" id=2]
[ext_resource path="res://supportScenes/residentialHouse.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/RtsCameraController.gd" type="Script" id=12]
[ext_resource path="res://scripts/roadController.gd" type="Script" id=17]
[ext_resource path="res://scripts/playerController.gd" type="Script" id=18]
[ext_resource path="res://supportScenes/roadNode.tscn" type="PackedScene" id=19]
[ext_resource path="res://scripts/main.gd" type="Script" id=20]
[ext_resource path="res://scripts/gameController.gd" type="Script" id=21]
[ext_resource path="res://supportScenes/simpleRoad.tscn" type="PackedScene" id=22]
[ext_resource path="res://supportScenes/simpleRoadEnd.tscn" type="PackedScene" id=23]
[ext_resource path="res://scripts/trafficController.gd" type="Script" id=24]
[ext_resource path="res://supportScenes/vehicleScene.tscn" type="PackedScene" id=25]
[ext_resource path="res://meshes/cursorMaterial.tres" type="Material" id=26]
[ext_resource path="res://supportScenes/factoryPreview.tscn" type="PackedScene" id=27]
[ext_resource path="res://scripts/buildingController.gd" type="Script" id=28]
[ext_resource path="res://supportScenes/factory.tscn" type="PackedScene" id=29]
[ext_resource path="res://supportScenes/simpleRoadUpgraded.tscn" type="PackedScene" id=30]

[sub_resource type="CylinderMesh" id=1]

[sub_resource type="SphereMesh" id=2]

[sub_resource type="CylinderShape" id=3]
radius = 7.34635
height = 0.692925

[sub_resource type="CylinderMesh" id=4]

[node name="main" type="Node"]
script = ExtResource( 20 )

[node name="gameController" type="Spatial" parent="."]
script = ExtResource( 21 )

[node name="playerController" type="Spatial" parent="gameController"]
script = ExtResource( 18 )
singleRoadNode = ExtResource( 19 )
factoryPreview = ExtResource( 27 )
residentialPreview = ExtResource( 2 )

[node name="RtsCameraController2" type="Spatial" parent="gameController/playerController"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 153.977, 6.85095, 127.98 )
script = ExtResource( 12 )
__meta__ = {
"_editor_description_": ""
}
max_elevation_angle = 90
pan_speed = 8.0
currentCamera = NodePath("../../gameController/playerController/RtsCameraController2/Elevation/Camera")

[node name="Elevation" type="Spatial" parent="gameController/playerController/RtsCameraController2"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )

[node name="Camera" type="Camera" parent="gameController/playerController/RtsCameraController2/Elevation"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )
far = 1000.0

[node name="Tween" type="Tween" parent="gameController/playerController/RtsCameraController2"]

[node name="lever" type="Spatial" parent="gameController/playerController"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.33081, 0 )
visible = false

[node name="RayCast" type="RayCast" parent="gameController/playerController/lever"]
enabled = true
cast_to = Vector3( 0, 0, -40 )

[node name="MeshInstance" type="MeshInstance" parent="gameController/playerController/lever"]
transform = Transform( 0.1, 0, 0, 0, -8.74228e-07, -0.1, 0, 20, -4.37114e-09, 0, 0, -19.9434 )
mesh = SubResource( 1 )
material/0 = null

[node name="collMesh" type="MeshInstance" parent="gameController/playerController"]
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="roadNodes" type="Spatial" parent="gameController/playerController"]
visible = false

[node name="roadNode" parent="gameController/playerController/roadNodes" instance=ExtResource( 19 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 175.659, 3.41034, 126.225 )

[node name="pnlRoad" type="Panel" parent="gameController/playerController"]
visible = false
anchor_left = 0.45
anchor_top = 0.8
anchor_right = 0.55
anchor_bottom = 0.8
margin_right = 40.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnAddRoad" type="Button" parent="gameController/playerController/pnlRoad"]
margin_left = 7.0
margin_top = 10.0
margin_right = 25.0
margin_bottom = 30.0
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnRemoveNode" type="Button" parent="gameController/playerController/pnlRoad"]
anchor_top = 0.269
anchor_bottom = 0.269
margin_left = 7.0
margin_top = 9.673
margin_right = 27.0
margin_bottom = 29.673
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblNeighbours" type="Label" parent="gameController/playerController/pnlRoad"]
margin_left = 31.0
margin_top = 10.0
margin_right = 164.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnUpgrade" type="Button" parent="gameController/playerController/pnlRoad"]
margin_left = 7.4054
margin_top = 55.4865
margin_right = 72.4054
margin_bottom = 75.4865
text = "Upgrade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pnlMode" type="Panel" parent="gameController/playerController"]
anchor_left = 0.35
anchor_top = 0.929
anchor_right = 0.65
anchor_bottom = 0.939
margin_top = -4.88
margin_right = 40.0
margin_bottom = 39.92
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnRoadMode" type="Button" parent="gameController/playerController/pnlMode"]
margin_left = 5.52972
margin_top = 5.52979
margin_right = 59.5297
margin_bottom = 44.5298
text = "Roads"

[node name="btnTestPath" type="Button" parent="gameController/playerController/pnlMode"]
anchor_left = 0.792
anchor_right = 0.842
margin_left = 7.0
margin_top = 7.0
margin_right = 61.0
margin_bottom = 44.0
text = "Test path"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnBuildingsMode" type="Button" parent="gameController/playerController/pnlMode"]
anchor_left = 0.161
anchor_top = 0.129
anchor_right = 0.269
anchor_bottom = 0.473
margin_left = -2.22829
margin_top = -0.866142
margin_right = 22.9797
margin_bottom = 20.2459
text = "Buildings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pnlBuilding" type="Panel" parent="gameController/playerController"]
visible = false
anchor_left = 0.45
anchor_top = 0.8
anchor_right = 0.55
anchor_bottom = 0.8
margin_left = -127.0
margin_right = 168.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ScrollContainer" type="ScrollContainer" parent="gameController/playerController/pnlBuilding"]
margin_left = 7.0
margin_top = 7.0
margin_right = 418.0
margin_bottom = 76.0
follow_focus = true
scroll_horizontal = 1

[node name="HBoxContainer" type="HBoxContainer" parent="gameController/playerController/pnlBuilding/ScrollContainer"]
margin_right = 145.0
margin_bottom = 20.0

[node name="btnFactory" type="Button" parent="gameController/playerController/pnlBuilding/ScrollContainer/HBoxContainer"]
margin_right = 58.0
margin_bottom = 20.0
text = "Factory"

[node name="btnResidential" type="Button" parent="gameController/playerController/pnlBuilding/ScrollContainer/HBoxContainer"]
margin_left = 62.0
margin_right = 145.0
margin_bottom = 20.0
text = "Residential"

[node name="Button" type="Button" parent="gameController/playerController/pnlBuilding"]
margin_left = 7.0
margin_top = 58.0
margin_right = 71.0
margin_bottom = 78.0
text = "Remove"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buildingAreaCursor" type="Area" parent="gameController/playerController"]

[node name="CollisionShape" type="CollisionShape" parent="gameController/playerController/buildingAreaCursor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.358865, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="gameController/playerController/buildingAreaCursor"]
transform = Transform( 3.15765, 0, 0, 0, 0.231034, 0, 0, 0, 3.19156, 0, 0.180204, 0 )
mesh = SubResource( 4 )
material/0 = ExtResource( 26 )

[node name="buildingAnchors" type="Spatial" parent="gameController/playerController"]

[node name="roadController" type="Spatial" parent="gameController"]
script = ExtResource( 17 )
simpleRoad = ExtResource( 22 )
roadEnd = ExtResource( 23 )
upgradedRoad = ExtResource( 30 )

[node name="roadBodies" type="Spatial" parent="gameController/roadController"]

[node name="trafficController" type="Spatial" parent="gameController"]
script = ExtResource( 24 )
testBody = ExtResource( 25 )

[node name="buildingController" type="Spatial" parent="gameController"]
script = ExtResource( 28 )
buildingFactory = ExtResource( 29 )
buildingResidential = ExtResource( 3 )

[node name="Server" type="Node" parent="."]
script = ExtResource( 1 )
[connection signal="button_up" from="gameController/playerController/pnlRoad/btnAddRoad" to="gameController/playerController" method="_on_btnAddRoad_button_up"]
[connection signal="button_up" from="gameController/playerController/pnlRoad/btnRemoveNode" to="gameController/playerController" method="_on_btnRemoveNode_button_up"]
[connection signal="button_up" from="gameController/playerController/pnlRoad/btnUpgrade" to="gameController/playerController" method="_on_btnUpgrade_button_up"]
[connection signal="button_up" from="gameController/playerController/pnlMode/btnRoadMode" to="gameController/playerController" method="_on_btnRoadMode_button_up"]
[connection signal="button_up" from="gameController/playerController/pnlMode/btnTestPath" to="gameController/playerController" method="_on_btnTestPath_button_up"]
[connection signal="button_up" from="gameController/playerController/pnlMode/btnBuildingsMode" to="gameController/playerController" method="_on_btnBuildingsMode_button_up"]
[connection signal="button_up" from="gameController/playerController/pnlBuilding/Button" to="gameController/playerController" method="_on_Button_button_up"]
